@@ -5,6 +5,12 @@
 This document provides a high-level view of the changes to the {project-name} by release.
 For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.
 
+== Unreleased
+
+Enhancements::
+
+* allow hyphenation to be turned on and configured using the `base-hyphens` key in the theme (#2161)
+
 == 2.0.0.beta.2 (2022-05-14) - @mojavelinux
 
 Enhancements::
